Endpoint para incorporar un hecho proveniente de una fuente listo